--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "prompt-library": "file:",
     "react": "^18.2.0",
