--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
-    "@types/node": "^20.4.5",
+    "@types/node": "^20.17.30",
     "css-loader": "^6.7.4",
     "express": "^5.1.0",
     "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.0",
-    "typescript": "^5.1.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^7.4.2",
@@ -32,8 +33,9 @@
     "webpack-hot-middleware": "^2.26.1"
   },
   "scripts": {
-    "start": "webpack serve --mode development",
-    "build": "webpack --mode production",
+    "start": "ts-node src/server_new.js",
+    "dev": "nodemon --exec ts-node src/server_new.js",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "type-check": "tsc --noEmit"
   },
