--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
     "prompt-library": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,15 +16,13 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/react-hooks": "^8.0.1",
     "@types/node": "^20.17.30",
+    "concurrently": "^9.1.2",
     "css-loader": "^6.7.4",
-    "express": "^5.1.0",
     "html-webpack-plugin": "^5.5.1",
     "jest": "^29.7.0",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.0",
-    "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
@@ -37,12 +31,11 @@
     "webpack-hot-middleware": "^2.26.1"
   },
   "scripts": {
-    "start": "node src/server_new.js",
-    "dev": "nodemon src/server_new.js",
     "frontend": "webpack serve --mode development --port 3000",
     "build": "webpack --mode production",
     "test": "jest",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "start-all": "concurrently \"npm run frontend\" \"mvn spring-boot:run -X\""
   },
   "browserslist": {
     "production": [
