--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "prompt-library": "file:",
     "react": "^18.2.0",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/axios": "^0.9.36",
     "@types/node": "^20.17.30",
     "concurrently": "^9.1.2",
     "css-loader": "^6.7.4",
